--- a/RaindropFall/MainPage.xaml
+++ b/RaindropFall/MainPage.xaml
@@ -4,7 +4,9 @@
              x:Class = "RaindropFall.MainPage"
              Title = "Raindrop Fall">
 
-    <Grid>
+    <AbsoluteLayout x:Name = "Scene" 
+                    VerticalOptions = "Fill" 
+                    HorizontalOptions = "Fill">
         
         <!-- Main Character -->
         <BoxView x:Name = "DropCharacter"
@@ -12,8 +14,17 @@
                  WidthRequest = "30"
                  HeightRequest = "30"
                  CornerRadius = "5"
-                 HorizontalOptions = "Center"
-                 VerticalOptions = "Center" />
-    </Grid>
+                 AbsoluteLayout.LayoutFlags = "PositionProportional"
+                 AbsoluteLayout.LayoutBounds = "0.5, 0.5, 30, 30" />
+
+        <!-- Test Motion -->
+        <BoxView x:Name = "TestMove"
+                 Color = "Red"
+                 WidthRequest = "20"
+                 HeightRequest = "20"
+                 CornerRadius = "5"
+                 AbsoluteLayout.LayoutFlags = "None"
+                 AbsoluteLayout.LayoutBounds = "0.8, 0.1, 25, 25" />
+    </AbsoluteLayout>
 
 </ContentPage>
