--- a/RaindropFall/MainPage.xaml
+++ b/RaindropFall/MainPage.xaml
@@ -1,47 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns = "http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:x = "http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class = "RaindropFall.MainPage"
              Title = "Raindrop Fall">
     <Grid BackgroundColor = "Black">
         <AbsoluteLayout x:Name = "Scene">
 
-        <!-- Touch Input Areas -->
+            <!-- Touch Input Areas -->
         
-        <!-- Left Half -->
-        <BoxView x:Name="LeftInputArea"
-                 Color = "Green" 
-                 AbsoluteLayout.LayoutFlags = "All"
-                 AbsoluteLayout.LayoutBounds = "0, 0, 0.5, 1">
-            <BoxView.GestureRecognizers>
-                <!-- Pointer events for continuous movement: triggers when pressed and released -->
-                <PointerGestureRecognizer PointerPressed = "OnLeftAreaPressed" />
-                <PointerGestureRecognizer PointerReleased = "OnInputAreaReleased" />
-                <PointerGestureRecognizer PointerExited = "OnInputAreaReleased" />
-            </BoxView.GestureRecognizers>
-        </BoxView>
+            <!-- Left Half -->
+            <BoxView    x:Name = "LeftInputArea"
+                        Color = "Green" 
+                        AbsoluteLayout.LayoutFlags = "All"
+                        AbsoluteLayout.LayoutBounds = "0, 0, 0.5, 1">
+                <BoxView.Behaviors>
+                    <toolkit:TouchBehavior CurrentTouchStatusChanged = "OnLeftTouchStatusChanged"/>
+                </BoxView.Behaviors>
+            </BoxView>
 
-        <!-- Right Half -->
-        <BoxView x:Name="RightInputArea"
-                 Color = "Yellow" 
-                 AbsoluteLayout.LayoutFlags = "All"
-                 AbsoluteLayout.LayoutBounds = "1, 0, 0.5, 1">
-            <BoxView.GestureRecognizers>
-                <!-- Pointer events for continuous movement: triggers when pressed and released -->
-                <PointerGestureRecognizer PointerPressed = "OnRightAreaPressed" />
-                <PointerGestureRecognizer PointerReleased = "OnInputAreaReleased" />
-                <PointerGestureRecognizer PointerExited = "OnInputAreaReleased" />
-            </BoxView.GestureRecognizers>
-        </BoxView>
+            <!-- Right Half -->
+            <BoxView    x:Name = "RightInputArea"
+                        Color = "Yellow" 
+                        AbsoluteLayout.LayoutFlags = "All"
+                        AbsoluteLayout.LayoutBounds = "1, 0, 0.5, 1">
+                <BoxView.Behaviors>
+                    <toolkit:TouchBehavior CurrentTouchStatusChanged = "OnRightTouchStatusChanged"/>
+                </BoxView.Behaviors>
+            </BoxView>
 
-        <!-- Main Character -->
-        <BoxView x:Name = "DropCharacter"
-                 Color = "Cyan"
-                 WidthRequest = "30"
-                 HeightRequest = "30"
-                 CornerRadius = "5"
-                 AbsoluteLayout.LayoutFlags = "PositionProportional"
-                 AbsoluteLayout.LayoutBounds = "0.5, 0.5, 30, 30" />
+            <!-- Main Character -->
+            <BoxView    x:Name = "DropCharacter"
+                        Color = "Cyan"
+                        WidthRequest = "30"
+                        HeightRequest = "30"
+                        CornerRadius = "5"
+                        AbsoluteLayout.LayoutFlags = "PositionProportional"
+                        AbsoluteLayout.LayoutBounds = "0.5, 0.5, 30, 30" />
         </AbsoluteLayout>
     </Grid>
 
