--- a/RaindropFall/Pages/Level1Page.xaml
+++ b/RaindropFall/Pages/Level1Page.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:views="clr-namespace:RaindropFall.Views"
              x:Class="RaindropFall.Pages.Level1Page"
-             Title="Level 1"
              BackgroundColor="#BFD7FF">
+    <Shell.NavBarIsVisible>False</Shell.NavBarIsVisible>
     <views:GameView x:Name="Game"/>
 </ContentPage>
