--- a/RaindropFall/Pages/Level2Page.xaml
+++ b/RaindropFall/Pages/Level2Page.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:views="clr-namespace:RaindropFall.Views"
              x:Class="RaindropFall.Pages.Level2Page"
-             Title="Level 2"
              BackgroundColor="#BFF5E1">
+    <Shell.NavBarIsVisible>False</Shell.NavBarIsVisible>
     <views:GameView x:Name="Game"/>
 </ContentPage>
